# s-cubes

./: .buildinfo  .gitignore  .gitmodules  README.html  README.md  README.rst  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  scubes.html  scubes.py  scubes.utilities.html  search.html  searchindex.js  setup.py
.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  scubes.doctree  scubes.utilities.doctree
.github/workflows/: compile_and_publish.yml  docs_deploy.yml  main.yml
_sources/: scubes.rst.txt
_static/: documentation_options.js
data/sex_data/: STRIPE82-0059_detection.sex  test.cat
data/zpcorr_iDR4/: SPLUS_F378_offsets_grid.npy  SPLUS_F410_offsets_grid.npy
docs/: README.rst  conf.py  ep.rst  gstart.rst  index.rst  makecube.rst  mask_stars_example.ipynb  mask_stars_example.rst  masterlist_example.ipynb  masterlist_example.rst  modules.rst  nb_example.ipynb  nb_example.rst  nb_example.tar.bz2  scubes.rst  scubes.utilities.rst
docs/source/: README.rst  conf.py  index.rst  modules.rst  scubes.utilities.rst
scripts/: plot_scubes.py  run_cubes_ml.sh  run_scubes_ml.sh
scubes/: core.py
scubes/utilities/: args.py  io.py  splusdata.py
src/scubes/: __init__.py  constants.py  control.py  core.py  entry_points.py  headers.py  mask_stars.py
src/scubes/data/: J0378.csv  J0395.csv  J0410.csv  J0430.csv  J0515.csv  J0660.csv  J0861.csv  central_wavelengths.csv  gSDSS.csv  iDR5_fields_zps.csv  iSDSS.csv  rSDSS.csv  uJAVA.csv  zSDSS.csv
src/scubes/data/zpcorr_iDR4/: SPLUS_F660_offsets_grid.npy  SPLUS_F861_offsets_grid.npy  SPLUS_I_offsets_grid.npy
src/scubes/data/zpcorr_iDR5/jype/: SPLUS_F378_offsets_grid.npy  SPLUS_F395_offsets_grid.npy  SPLUS_F410_offsets_grid.npy  SPLUS_F430_offsets_grid.npy  SPLUS_F515_offsets_grid.npy  SPLUS_F660_offsets_grid.npy  SPLUS_F861_offsets_grid.npy  SPLUS_G_offsets_grid.npy  SPLUS_I_offsets_grid.npy  SPLUS_R_offsets_grid.npy  SPLUS_U_offsets_grid.npy  SPLUS_Z_offsets_grid.npy
src/scubes/data/zpcorr_iDR5/mar/: SPLUS_F378_offsets_grid.npy  SPLUS_F395_offsets_grid.npy  SPLUS_F410_offsets_grid.npy  SPLUS_F430_offsets_grid.npy  SPLUS_F515_offsets_grid.npy  SPLUS_F660_offsets_grid.npy  SPLUS_F861_offsets_grid.npy  SPLUS_G_offsets_grid.npy  SPLUS_I_offsets_grid.npy  SPLUS_R_offsets_grid.npy  SPLUS_U_offsets_grid.npy  SPLUS_Z_offsets_grid.npy
src/scubes/utilities/: args.py  constants.py  daofinder.py  headers.py  io.py  masks.py  plots.py  psf.py  readscube.py  sextractor.py  sky.py  splusdata.py  stats.py  utils.py
src/scubes/utilities/data/sex/: default.param  default.sex
