[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "s-cubes"
authors = [
    {name = "Eduardo Alberto Duarte Lacerda", email = "dhubax@gmail.com"},
    {name = "Fabio Herpich", email = "fabiorafaelh@gmail.com"},
]
keywords = ["galaxies"]
license = {file = "LICENSE.txt"}
description = "Make galaxy cubes (X, Y, Lambda) with S-PLUS data."
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.8",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
    "astropy",
    "regions",
    "tqdm",
    "photutils",
    "splusdata",
    "sewpy @ git+https://github.com/megalut/sewpy.git@master"
]
dynamic = ["version", "readme"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"scubes.data" = ["*", "zpcorr_iDR4/*"]
"scubes.utilities.data" = ["*", "sex/*"]

[project.scripts]
scubes = "scubes.entry_points:scubes"
get_lupton_RGB = "scubes.entry_points:get_lupton_RGB"
sex_mask_stars = "scubes.entry_points:sex_mask_stars"

[project.urls]
Documentation = "http://elacerda.github.io/s-cubes"

[tool.setuptools_scm]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

